# fabianwesth.github.io

./: CNAME  README.md  TODO.md  index.html  projects.html  pyproject.toml  styles.css
scripts/: serve.py
