[project]
name = "personal-website"
version = "0.1.0"
description = "Personal website"
requires-python = ">=3.9"
dependencies = [
    "setuptools",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
serve = "scripts.serve:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
